@@ -28,6 +28,7 @@ AllOverIt - v1.20.0
   * Changed event aggregator subscription interface and classes from public to internal
   * Added more SelectAsXXXAsync() methods for IAsyncEnumerable<TType>
   * Changed order of arguments passed to RepeatingTask.Start() so the cancellation token is immediately prior to default args
+  * Moved FormatJsonString() to StringFormatExtensions and JsonString.Format()
 
 AllOverIt.Aws.Cdk.AppSync - v0.16.1
   * Updated to Amazon.CDK.AWS.AppSync v1.128.0
